<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_security"
            android:title="@string/nav_security" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/nav_privacy_policy" />
        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/ic_delete_forever"
            android:title="@string/nav_delete_account" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />
    </group>

</menu>

